Removed OpenSSL support code
See merge request search-guard/search-guard-suite-enterprise!110

Conflicts:
	security/src/test/java/com/floragunn/searchguard/ssl/OpenSSLTest.java